docs/1.x/next-steps.md
# Next steps

Version: 1.x

Sitemap: [llms-1.x.txt](https://reactnavigation.org/llms-1.x.txt)

You are now familiar with how to create a `StackNavigator`, configure it on your screen components, navigate between routes, and display full-screen modals. `StackNavigator` and its related APIs will be the most frequently used tools in your React Navigation toolbelt, but there are problems that they don't solve. For example, you can't build tab-based navigation using a `StackNavigator` &mdash; for that, you need to use a [TabNavigator](tab-based-navigation.md).

The rest of the documentation is organized around specific use cases, so you can jump between the sections under "How do I do ...?" as the need arises (but it also wouldn't hurt you to familiarize yourself with them pre-emptively!).

While most users won't need to do this, if you are curious and want to learn more about how React Navigation works, it's recommended to work through the "Build your own Navigator" section.

Lastly, you might want to bookmark the [API reference](api-reference.md) page for future reference.

Good luck!
