docs/6.x/next-steps.md
# Next steps

Version: 6.x

Sitemap: [llms-6.x.txt](https://reactnavigation.org/llms-6.x.txt)

You are now familiar with how to create a stack navigator, configure it on your screen components, navigate between routes, and display modals. Stack navigators and their related APIs will be the most frequently used tools in your React Navigation toolbelt, but there are problems that they don't solve. For example, you can't build tab-based navigation using a stack navigator &mdash; for that, you need to use a [Bottom Tabs Navigator](bottom-tab-navigator.md).

The rest of the documentation is organized around specific use cases, so you can jump between the sections under "Guides" as the need arises (but it also wouldn't hurt you to familiarize yourself with them pre-emptively!).

Some of the guides you may want to check out are:

- [Tab navigation](tab-based-navigation.md): How to show tabs at the bottom of the screen.
- [Drawer navigation](drawer-based-navigation.md): How to show a drawer from the left or right side of the screen.
- [Authentication flows](auth-flow.md): How to handle authentication flows in your app.
- [Supporting safe areas](handling-safe-area.md): How to handle safe areas such as statusbar in your app.
- [Deep linking](deep-linking.md): How to handle deep linking and universal links in your app.
- [Themes](themes.md): How to customize the look and feel of various UI elements.
- [Testing with Jest](testing.md): How to test your navigation components.
- [Configuring TypeScript](typescript.md): How to configure TypeScript for React Navigation.

While most users won't need to do this, if you are curious and want to learn more about how React Navigation works, it's recommended to work through the [Navigation State reference](navigation-state.md) and [Build your own Navigator](custom-navigators.md) sections.

Good luck!
